# BinaryRegionGrowing

./: BinaryRegionGrowing.hpp  CMakeLists.txt  CMakeLists.txt~  README.md  README.md~  main.cpp
test_functional/: CMakeLists.txt  test_functional.cpp
test_performance/: CMakeLists.txt  test_performance.cpp
